fix chart div sizing (on mobile)

--- a/style.css
+++ b/style.css
@@ -34,3 +34,9 @@
   font-weight: bold;
   font-size: 1.5em;
 }
+
+.chart {
+  min-height: 300px;
+  height: 100%;
+  max-height: 700px;
+}
